	PR c/44715 	* cp-gimplify.c (genericize_cp_loop): Call begin_bc_block only 	after genericizing cond and incr expressions.

* doc/extend.texi: Document break and continue behavior in
	statement expressions.

	* c-c++-common/pr44715.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@268188 138bc75d-0d04-0410-961f-82ee72b054a4